--- a/Week-0/Assignment-2/style.css
+++ b/Week-0/Assignment-2/style.css
@@ -1,213 +1,167 @@
 * {
   box-sizing: border-box;
 }
-html {
-  font-size: 1.125rem;
-  background-color: #f5f5f5;
-}
-body {
+.post {
   display: flex;
-  justify-content: center; /*水平置中*/
-  /* align-items: center; */
-}
-.container {
-  position: absolute;
+  flex-direction: column;
   width: 700px;
   height: 397px;
-  background-color: #ffffff;
-  border: 1px solid #bcbdbe;
   border-radius: 25px;
+  border: 1px solid #d3d3d3;
 }
 
-/* 動態本身 */
-.post {
-  position: absolute;
-  top: 20px;
-  left: 40px;
+.post-self {
+  display: flex;
+  flex-direction: column;
+  margin-top: 20px;
+  margin-left: 40px;
   width: 409.02px;
   height: 151px;
+  /* border: 1px solid #d3d3d3; */
 }
 .Group40 {
-  position: absolute;
-  /* top: 20px;
-  left: 40px; 繼承post*/
-  margin: 0;
+  display: flex;
   width: 161.58px;
   height: 76.81px;
+  /* border: 1px solid #d3d3d3; */
 }
 .Ellipse24 {
-  position: absolute;
-  /* top: 20px;
-  left: 40px; 繼承Group40*/
-  margin: 0;
   width: 75.19px;
   height: 75px;
-  background-color: #d3d3d3;
-  border: 1px solid #d3d3d3;
+  background: #d3d3d3;
   border-radius: 50px;
+  border: 1px solid #d3d3d3;
 }
-.your-friend {
-  position: absolute;
-  top: 18px;
-  left: 82.77px;
-  margin: 0;
+.user {
+  display: flex;
+  flex-direction: column;
+  margin-top: 18px;
+  margin-left: auto;
   width: 74.37px;
   height: 58.81px;
+  /* border: 1px solid #d3d3d3; */
 }
-.text-friend {
-  margin: 0;
-  font-family: "Outfit";
-  font-style: normal;
-  font-weight: 700;
+.name {
+  font-family: Outfit;
   font-size: 16px;
+  font-weight: 700;
   line-height: 24px;
-  /* or 150% */
-  color: #000000;
+  letter-spacing: 0em;
+  text-align: left;
 }
-.show-time {
-  position: absolute;
-  top: 21px;
-  width: 63.16px;
-  height: 26px;
-  font-family: "Outfit";
-  font-style: normal;
-  font-weight: 400;
+.timestamp {
+  font-family: Outfit;
   font-size: 13px;
+  font-weight: 400;
   line-height: 24px;
-  /* or 185% */
-
-  color: #919191;
+  letter-spacing: 0em;
+  text-align: left;
+  color: #909090;
 }
-.content {
-  position: absolute;
-  top: 112.19px;
+
+.text1 p {
+  margin-top: 15.38px;
   width: 409.02px;
   height: 58.81px;
-}
-.content-text {
-  margin: 0;
-  font-family: "Outfit";
-  font-style: normal;
-  font-weight: 500;
+  /* border: 1px solid #d3d3d3; */
+  font-family: Outfit;
   font-size: 16px;
+  font-weight: 500;
   line-height: 24px;
-  /* or 150% */
-
-  color: #000000;
+  letter-spacing: 0em;
+  text-align: left;
 }
 
-/* 三大功能 */
-.three-fn {
-  position: absolute;
-  top: 212px;
-  left: 35px;
+.main-func,
+.likes,
+.comment {
+  align-self: center;
+}
+
+.main-func {
+  display: flex;
+  align-items: center;
+  margin-top: 41px;
   width: 630px;
   height: 50px;
-  border-top: 1px solid #bfbfbf;
-  border-bottom: 1px solid #bfbfbf;
+  border-top: 1px solid #d3d3d3;
+  border-bottom: 1px solid #d3d3d3;
 }
 .Ellipse40 {
-  position: absolute;
-  top: 10px;
-  left: 5px;
+  margin-left: 5px;
   width: 30px;
   height: 30px;
-  background-color: #f85c53;
-  border: 1px solid #f85c53;
+  top: 222px;
+  left: 40px;
   border-radius: 50px;
+  background: #f85c53;
 }
 .Ellipse41 {
-  position: absolute;
-  top: 10px;
-  left: 45px;
+  margin-left: 10px;
   width: 30px;
   height: 30px;
-  background-color: #d3d3d3;
-  border: 1px solid #d3d3d3;
+  top: 222px;
+  left: 40px;
   border-radius: 50px;
+  background: #d3d3d3;
 }
-
-/* 幾人點讚分享 */
-.likes-num {
-  position: absolute;
-  top: 272px;
+.likes {
+  display: flex;
+  margin-top: 10px;
   width: 700px;
   height: 35px;
-  border-bottom: 1px solid #d9d9d9;
+  border-bottom: 1px solid #d3d3d3;
+  justify-content: space-between;
 }
-.num-of-people {
-  position: absolute;
-  bottom: 10px;
-  left: 35px;
-  width: 219.54px;
+.numbs-likes {
+  margin-left: 35px;
+  width: 219.54;
   height: 25px;
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 400;
+  /* border: 1px solid #d3d3d3; */
+  font-family: Roboto;
   font-size: 16px;
+  font-weight: 400;
   line-height: 24px;
-  /* or 150% */
-
+  letter-spacing: 0em;
+  text-align: left;
   color: #5c5c5c;
 }
-.num-of-message {
-  position: absolute;
-  bottom: 3px;
-  left: 536px;
+.numbs-messages {
+  margin-right: 35px;
   width: 129px;
-  height: 31px;
-
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 400;
+  height: 25px;
+  font-family: Roboto;
   font-size: 16px;
+  font-weight: 400;
   line-height: 24px;
-  /* or 150% */
-
+  letter-spacing: 0em;
   text-align: right;
-
   color: #5c5c5c;
 }
-
-/* 留言 */
-.message {
-  position: absolute;
-  top: 327px;
-  left: 40px;
+.comment {
+  display: flex;
+  margin-top: 20px;
+  justify-content: space-between;
   width: 620px;
   height: 50px;
 }
-.personal-image {
-  position: absolute;
-  width: 50px;
-  height: 50px;
-  background: url(profile-user-svgrepo-com2.png);
-}
-.container-leave-message {
-  position: absolute;
-  left: 65px;
-  width: 554.99px;
-  height: 50px;
-
-  background: rgba(217, 217, 217, 0.39);
-  border: 1px solid #f0f0f0;
-  border-radius: 30px;
-}
-.container-leave-message p {
-  position: absolute;
-  margin: 0;
-  width: 555.47px;
-  height: 50px;
-
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 20px;
-  line-height: 24px;
-  /* or 120% */
+.leave-message {
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 555.47px;
+  height: 50px;
+  background-color: #f0f0f0;
+  border-radius: 30px;
+  border: 1px solid #f0f0f0;
+  font-family: Roboto;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0em;
   text-align: center;
   color: #777777;
+}
+a:hover {
+  text-decoration: underline;
 }
